<resources>
    <string name="app_name">BarCodeScanner</string>
    <string name="auto_manual_text">Auto</string>
    <string name="barcode_text_text">Current Barcode</string>
    <string name="capture_content_desc">Capture barcode</string>
    <string name="current_weight">Weight</string>
    <string name="current_cost">Cost</string>
    <string name="current_item_name">Fuji Apple</string>
    <string name="current_item_cost">$1.29 / lb</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>