<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightActivity">

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:padding="5dp"
        android:text="@string/current_weight"
        android:textSize="90sp"
        app:layout_constraintTop_toTopOf="parent"  />

    <TextView
        android:id="@+id/weight_cost_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:padding="5dp"
        android:text="@string/current_cost"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/weight_text"  />
    <TextView
        android:id="@+id/weight_item_name_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:padding="5dp"
        android:text="@string/current_item_name"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/weight_cost_text"/>
    <TextView
        android:id="@+id/weight_item_price_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:gravity="end"
        android:textAlignment="viewEnd"
        android:padding="5dp"
        android:text="@string/current_item_cost"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/weight_item_name_text"
         />

    <Button
        android:id="@+id/weight_add_cart_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:text="@string/add_to_cart"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/weight_item_price_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>